IDE: fixes start button to cause horizontal scroll

--- a/client/ide/styl/ide.chat.styl
+++ b/client/ide/styl/ide.chat.styl
@@ -76,8 +76,6 @@ pmLinkColor   = #B6B6B6
 
       .kdbutton
         size                293px 34px
-        &:first-child
-          margin            0 17px 0 0
         &[disabled]
           bg                color #D0D0D0
 
